fix(ui5-panel): The expand/collapse button is not in the DOM when fixed (#1793)

--- a/packages/main/src/themes/Panel.css
+++ b/packages/main/src/themes/Panel.css
@@ -12,10 +12,6 @@
 	border-bottom: 1px solid var(--sapGroup_TitleBorderColor);
 }
 
-:host([fixed]) .ui5-panel-header-button-root {
-	display: none;
-}
-
 :host([fixed]) .ui5-panel-header {
 	padding-left: 1rem;
 }
